[GENERICS] - implementing Generic Type comparator